--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="magic.css">
   <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Honk">
@@ -11,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-  <title>My Page</title>
+  <title>Hoochie</title>
 </head>
 <body>
   <header>
@@ -213,10 +215,32 @@ A joy that fills both day and night.</p>
         </a>
     </div>
 </section>
+ <section class= "camera">
+   <div class="display-cover">
+    <video autoplay></video>
+    <canvas class="d-none"></canvas>
+
+    <div class="video-options">
+        <select name="" id="" class="custom-select">
+            <option value="">Select camera</option>
+        </select>
+    </div>
+
+    <img class="screenshot-image d-none" alt="">
+
+    <div class="controls">
+        <button class="btn btn-danger play" title="Play"><i data-feather="play-circle"></i></button>
+        <button class="btn btn-info pause d-none" title="Pause"><i data-feather="pause"></i></button>
+        <button class="btn btn-outline-success screenshot d-none" title="ScreenShot"><i data-feather="image"></i></button>
+    </div>
+</div>
+ </section>
   <footer>
     <p>&copy; 2024 My Website</p>
   <p>Author: Leo Dawg</p>
   <p><a href="mailto:leonardjlapaz13@gmail.com">leonardjlapaz13@gmail.com</a></p>
   </footer>
- <script src="coffee.js"></script> </body>
+ <script src="coffee.js"></script> 
+ <script src="https://unpkg.com/feather-icons"></script>
+ </body>
 </html>
