--- a/index.html
+++ b/index.html
@@ -1,246 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-   <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="magic.css">
-  <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Honk">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-  <title>Hoochie</title>
-</head>
 <body>
-  <header>
-    <h1 class= "heed">This is my webpage</h1>
-  </header>
-
-  <section class= "introsec">
-    <h2>We like to have fun here.</h2>
-    <p>Click the buttons to see what happens!</p>
-    <button id="scrollToImg"> Boob </button>
-    <button id="scrollToMatrix"> Exit Simulation </button>
-    <button id="moving-button">Click Me</button>
-    <button id="cream">Ice Cream Inshallah</button>
-    <button id="strength">Go Super Saiyan!</button>
-
- </section>
-
-  <section class= "aboutsec">
-    <h2 class= "two">Let's Party!!!</h2>
-    <p class="circle">
-The Matrix: Unplug and Unwind </p>
-<p class="circle">This drinking game is designed for entertainment purposes only. Please drink responsibly and know your limits.</p>
-
-<p class="circle">General Rules:</p>
-
-<p class="circle">Take one sip whenever:</p>
-<ul>
-  <li>Someone says "The Matrix."</li>
-  <li>You see green code raining down the screen.</li>
-  <li>A character takes the red pill.</li>
-  <li>A character performs a bullet-time dodge.</li>
-  <li>A phone rings.</li>
-  <li>Someone mentions "the One."</li>
-  <li>You see a character in a trench coat.</li>
-  <li>A fight scene begins.</li>
-</ul>
-<p class="circle">Character Specifics:</p>
-
-<p class="circle">Take two sips whenever:</p>
-<ul>
-  <li>Morpheus says "wake up."</li>
-  <li>Neo says "Whoa."</li>
-  <li>Trinity flips through the air.</li>
-  <li>Agent Smith smirks.</li>
-  <li>The Oracle gives cryptic advice.</li>
-</ul>
-<p class="circle">Movie Specifics:</p>
-
-<p class="circle">The Matrix:</p>
-
-<p class="circle">Take three sips whenever:</p>
-<ul>
-  <li>Neo first bends the spoon.</li>
-  <li>Morpheus offers the red or blue pill choice.</li>
-  <li>Neo dodges bullets for the first time.</li>
-</ul>
-<p class="circle">Finish your drink when:</p>
-   <ul>
-  <li>Morpheus says "There is no spoon."</li>
-</ul>
-<p class="circle">The Matrix Reloaded:</p>
-
-<p class="circle">Take three sips whenever:</p>
-<ul>
-  <li>Neo enters the "real world" for the first time.</li>
-  <li>The Architect explains the Matrix's purpose.</li>
-  <li>Neo fights multiple Agent Smiths.</li>
-</ul>
-<p class="circle">Finish your drink when:</p>
-<ul>
-  <li>Neo and Trinity kiss in the rain.</li>
-</ul>
-<p class="circle">The Matrix Revolutions:</p>
-
-<p class="circle">Take three sips whenever:</p>
-<ul>
-  <li>Neo loses his powers.</li>
-  <li>The Zion battle begins.</li>
-  <li>Neo sacrifices himself.</li>
-</ul>
-<p class="circle">Finish your drink when:</p>
-<ul>
-  <li>The trilogy ends (for better or worse).</li>
-</ul>
-<p class="circle">Bonus Round:</p>
-
-<p class= "circle">Throughout the trilogy, take one sip whenever you notice:</p>
- <ul>
-  <li>A philosophical discussion about reality.</li>
-  <li>A reference to mythology or religion.</li>
-  <li>A slow-motion close-up shot.</li>
-  <li>A character wearing sunglasses indoors.</li>
-</ul>
-
-<p class= "circle">Remember:  Look within yourselves, for what you seek lies not in the whispers of doubt, but in the fire that burns within. The path to glory, the path to your truest potential, is not paved with ease, but with struggle.</p>
-
-<p class= "circle">There will be doubt, an insidious snake coiling around your resolve. It will whisper of limitations, of the comfort of the familiar. Heed it not. Doubt is but a fleeting shadow, a test of your mettle.</p>
-
-<p class= "circle">There will be pain, a searing fire scorching your very being. It will scream for you to yield, to succumb to the temptation of surrender. Embrace it. Pain is the crucible that forges your strength, the sculptor that chisels away your weaknesses.</p>
-
-<p class= "circle">There will be moments when you stumble, when the weight of your journey threatens to crush you. Fall. Rise again. Each fall is a lesson, a mark upon the path that guides you closer to your destiny.</p>
-
-<p class= "circle">For within you lies the potential for greatness, a sleeping giant yearning to be awakened. It slumbers beneath the layers of fear, of doubt, of the whispers of "what if." But with each push, with each struggle overcome, you chip away at the prison walls, inching closer to the light.</p>
-
-<p class= "circle">And when you finally break free, when you stand tall bathed in the glory of your achievement, remember the journey. Remember the doubts conquered, the pain endured, the falls from which you rose ever stronger. For it is in the crucible of sacrifice that true victory is forged.</p>
-
-<p class= "circle">Now go forth, warriors. Embrace the struggle for it is the very fuel that propels you towards your glory. remember to drink Heavily!</p>
-  </section>
-
-  <section class= "imgsec">
-    <h2>Section 3 Title</h2>
-    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.explicit.bing.net%2Fth%3Fid%3DOIP.VGNYZC6PfZA2JMe6xyvjXAHaLE%26pid%3DApi&f=1&ipt=c7e1e5e8065a3447c720820a982e571d983fdf767b55b7c8f1ff10162a0cf0ea&ipo=images" alt="Placeholder image">
-    <p>Oh, succulent orb of golden hue,
-In orchards bathed in morning dew,
-Your fragrance whispers tales untold,
-As ripened secrets you unfold.</p>
-
-    <p>Amidst the boughs where zephyrs play,
-You sway in sun's warm, golden ray.
-Each tender curve, a gentle blush,
-A treasure found in nature's hush.</p>
-
-    <p>With flesh so tender, sweet, and pure,
-You're summer's gift, so rich and sure.
-A symphony of flavors rare,
-That burst upon the eager air.</p>
-
-    <p>Juices dribble, trickle down,
-As lips partake of nature's crown.
-Each bite a blissful melody,
-A taste of heaven's own decree.</p>
-
-    <p>In pies and cobblers, you hold sway,
-In jams, you brighten up the day.
-Yet in simplicity, you shine,
-A fruit so fine, a gift divine.</p>
-
-    <p>So here's to you, oh juicy peach,
-In gardens where the songbirds preach.
-Your presence brings such sweet delight,
-A joy that fills both day and night.</p>
-  <button id="redirect-button">Special Surprize!</button>
-  </section>
-<section id= "cardi">
-<audio id="myAudio" src="https://download.quranicaudio.com/quran/mishaari_raashid_al_3afaasee/001.mp3"></audio>
-  <h1>Flavors of existential angst ice cream </h1>
-   <div class="container">
-    <div class="card">
-     <h3 class="title">vanilla (meaningless void)</h3>
-    <div class="bar">
-      <div class="emptybar"></div>
-      <div class="filledbar"></div>
-    </div>
-    <div class="bircle">
-      <img class="taylor" src="https://content.imageresizer.com/images/memes/Taylor-Swift-Thumbs-Up-meme-80afe4.jpg" alt="Placeholder image">
-    </div>
+<div class="gallery-container">
+  <div class="thumbnails"></div>
+  <div class="scrollbar">
+    <div class="thumb"></div>
   </div>
-  <div class="card">
-    <h3 class="title">chocolate (empty calories of existence)</h3>
-    <div class="bar">
-      <div class="emptybar"></div>
-      <div class="filledbar"></div>
-    </div>
-    <div class="bircle">
-      <img class="choco" src="https://th.bing.com/th/id/OIG3.RsxmGw9oXU03HcJA2_XQ?w=1024&h=1024&rs=1&pid=ImgDetMain" alt="Placeholder image">
-    </div>
-  </div>
-  <div class="card">
-    <h3 class="title">mint chip (a refreshing minty chill of despair)</h3>
-    <div class="bar">
-      <div class="emptybar"></div>
-      <div class="filledbar"></div>
-    </div>
-    <div class="bircle">
-      <img class="mint" src="https://th.bing.com/th/id/OIG1.NVK07Ui36yyMqsWltSXS?w=1024&h=1024&rs=1&pid=ImgDetMain" alt="Placeholder image">
-    </div>
-  </div>
-  <div class="card">
-    <h3 class="title">burnt caramel (the bittersweet taste of futility)</h3>
-    <div class="bar">
-      <div class="emptybar"></div>
-      <div class="filledbar"></div>
-    </div>
-    <div class="bircle">
-          <img class="caramel" src="https://best-quotations.com/images/catpics/mataiotita.jpg" alt= "caramel">
-          </div>
+  <div class="slides">
+    <div><img src="https://picsum.photos/id/1067/540/720"></div>
+    <div><img src="https://picsum.photos/id/122/540/720"></div>
+    <div><img src="https://picsum.photos/id/188/540/720"></div>
+    <div><img src="https://picsum.photos/id/249/540/720"></div>
+    <div><img src="https://picsum.photos/id/257/540/720"></div>
+    <div><img src="https://picsum.photos/id/259/540/720"></div>
+    <div><img src="https://picsum.photos/id/283/540/720"></div>
+    <div><img src="https://picsum.photos/id/288/540/720"></div>
+    <div><img src="https://picsum.photos/id/299/540/720"></div>
   </div>
 </div>
-</section>
-<section class="stayback">
-  <h1 class="goku"> Test Your Strength!
-  </h1>
-  <div class="speech-bubble">
-    <p>Just try and get close!</p>
-  </div>
-<div class="image-container">
-        <a href="#">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.pngkit.com%2Fpng%2Ffull%2F393-3930198_dragon-ball-clipart-super-saiyan-goku-ssj-db.png&f=1&nofb=1&ipt=5aa33de65f69582a1b792dfec31c14b2bc446f26aed2b922dff3b3b760e1e26e&ipo=images" alt="Image description">
-        </a>
-    </div>
-</section>
- <section class= "camera">
-   <div class="display-cover">
-    <video autoplay></video>
-    <canvas class="d-none"></canvas>
-
-    <div class="video-options">
-        <select name="" id="" class="custom-select">
-            <option value="">Select camera</option>
-        </select>
-    </div>
-
-    <img class="screenshot-image d-none" alt="">
-
-    <div class="controls">
-        <button class="btn btn-danger play" title="Play"><i data-feather="play-circle"></i></button>
-        <button class="btn btn-info pause d-none" title="Pause"><i data-feather="pause"></i></button>
-        <button class="btn btn-outline-success screenshot d-none" title="ScreenShot"><i data-feather="image"></i></button>
-    </div>
-</div>
- </section>
-  <footer>
-    <p>&copy; 2024 My Website</p>
-  <p>Author: Leo Dawg</p>
-  <p><a href="mailto:leonardjlapaz13@gmail.com">leonardjlapaz13@gmail.com</a></p>
-  </footer>
- <script src="coffee.js"></script> 
- <script src="https://unpkg.com/feather-icons"></script>
- </body>
-</html>
+</body>
