--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<head>
+  <meta charset="UTF-8">
+   <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="magic.css">
+  <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Honk">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+  <title>Hoochie</title>
+</head>
 <body>
 <div class="gallery-container">
   <div class="thumbnails"></div>
@@ -16,4 +31,5 @@
     <div><img src="https://picsum.photos/id/299/540/720"></div>
   </div>
 </div>
+  <script src="coffee.js"></script> 
 </body>
