--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
   <title>Hoochie</title>
 </head>
+<header>
+  <h1 class= "heed">This is my webpage</h1>
+</header>
 <body>
 <div class="gallery-container">
   <div class="thumbnails"></div>
