--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+ <link rel="icon" type="image/x-icon" href="https://th.bing.com/th/id/OIG2.XsD2__cmN51x9e1JD9Oh?w=1024&h=1024&rs=1&pid=ImgDetMain">
   <title>Hoochie</title>
 </head>
 <header>
