--- a/index.html
+++ b/index.html
@@ -1,34 +1,107 @@
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-   <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="magic.css">
-  <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Honk">
+    <meta charset="UTF-8">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
- <link rel="icon" type="image/x-icon" href="https://th.bing.com/th/id/OIG2.XsD2__cmN51x9e1JD9Oh?w=1024&h=1024&rs=1&pid=ImgDetMain">
-  <title>Hoochie</title>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="magic.css">
+    <title>Micheal Mills Art</title>
 </head>
-<header>
-  <h1 class= "heed">This is my webpage</h1>
-</header>
 <body>
-<div class="booth"> 
-  <!-- Camera -->
-    <main id="camera">
-        <!-- Camera sensor -->
-        <canvas id="camera--sensor"></canvas>
-        <!-- Camera view -->
-        <video id="camera--view" autoplay playsinline></video>
-        <!-- Camera output -->
-        <img src="//:0" alt="" id="camera--output">
-        <!-- Camera trigger -->
-        <button id="camera--trigger">Take a picture</button>
-    </main>
+ <header>
+  
+ 
+    <div class="container">
+      <h1>Micheal Mills Art</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="tel:+19707399259">(970)739-9259</a></li>
+        </ul>
+      </nav>
+      <button class="menu-toggle">Menu</button>
+    </div>
+ </header>
+ 
+<section class="image-text-container">
+    <div class="image-side">
+      <img src="https://af3aab831e900272fbcc.cdn6.editmysite.com/uploads/b/af3aab831e900272fbccc77c785648350b659b263e913372bf4340f596e58fa3/103A816C-2F7E-43A1-B176-7E2E1282C625_1672858976.JPG?width=2400&optimize=medium" alt="Image description">
+    </div>
+    <div class="text-side">
+      <h2>About Mikey</h2>
+      <p>Dive into the kaleidoscope. Here, visions bloom on canvas, walls morph into dreamscapes, and sketches dance on the edge of perception. I'm a weaver of realities, a conjurer of colors. Explore the unbound, the electric, the places where your mind takes flight. Ready to chase the muse down the rabbit hole? Let's paint a masterpiece that bends the light.</p>
+<div id="textContainer"></div>
+    </div>
+  </section>
+ <section class="paintings">
+  <h2>Paintings</h2>
+  <div class= "wrapper">
+   <div class="paintBlock">
+    <img class="painting" src='blueBlur.jpg'/>
+     <h3 class="caption">Blue Blur</h3>
+</div>
+    <div class="paintBlock">
+     <img class="painting" src='blueClouds.jpg'/>
+      <h3 class="caption">Blue Clouds</h3>
+    </div>
+   <div class="paintBlock">
+    <img class="painting" src='blueStreak.jpg'/>
+     <h3 class="caption">Blue Streak</h3>
+</div>
+   <div class="paintBlock">
+    <img class="painting" src='headOnBlack.jpg'/>
+     <h3 class="caption">Head On Black</h3>
+</div>
+   <div class="paintBlock">
+    <img class="painting" src='puzzle.jpg'/>
+     <h3 class="caption">Puzzle</h3>
+</div>
+   <div class="paintBlock">
+    <img class="painting" src='redBorder.jpg'/>
+     <h3 class="caption">Red Border</h3>
+</div>
+   <div class="paintBlock">
+    <img class="painting" src='redCloud.jpg'/>
+     <h3 class="caption">Red Cloud</h3>
+</div>
+   <div class="paintBlock">
+    <img class="painting" src='worm.jpg'/>
+     <h3 class="caption">Worm</h3>
+</div>
+  </div>
+  <button class= "viewGallery">
+     Veiw Gallery
+  </button>
+ </section>
+<section class="image-text-container">
+    <div class="image-side">
+      <img src="mikey.jpg" alt="Image description">
+    </div>
+    <div class="text-side">
+      <h2 class= "inTouch">Get in touch</h2>
+        <h3 class="hePaints">If you need a mural, portrait or anything else painted, Mikey Paints!</h3>
+      <ul>
+    <li><i class="fas fa-phone"></i> Phone: <a href="tel:+15551234567">555-123-4567</a></li>
+    <li><i class="fas fa-envelope"></i> Email: <a href="mailto:youremail@domain.com">Mikey@gmail.com</a></li>
+    <li><i class="fas fa-globe"></i> Website: <a href="https://www.turquoiseravenartgallery.com/">Turquise Raven Art Gallery</a></li>
+  </ul>
+    </div>
+  </section>
+<footer>
+    <p>&copy; 2024 Micheal Mills</p>
+    <nav>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+    </nav>
+  </footer>
+<script src="coffee.js"></script>
 </body>
- <script src="coffee.js"></script> 
+</html>
