--- a/index.html
+++ b/index.html
@@ -42,35 +42,35 @@
   <h2>Paintings</h2>
   <div class= "wrapper">
    <div class="paintBlock">
-    <img class="painting" src='blueBlur.jpg'/>
+    <img class="painting" src='BlueBlur.JPG'/>
      <h3 class="caption">Blue Blur</h3>
 </div>
     <div class="paintBlock">
-     <img class="painting" src='blueClouds.jpg'/>
+     <img class="painting" src='blueClouds.JPG'/>
       <h3 class="caption">Blue Clouds</h3>
     </div>
    <div class="paintBlock">
-    <img class="painting" src='blueStreak.jpg'/>
+    <img class="painting" src='blueStreak.JPG'/>
      <h3 class="caption">Blue Streak</h3>
 </div>
    <div class="paintBlock">
-    <img class="painting" src='headOnBlack.jpg'/>
+    <img class="painting" src='headOnBlack.JPG'/>
      <h3 class="caption">Head On Black</h3>
 </div>
    <div class="paintBlock">
-    <img class="painting" src='puzzle.jpg'/>
+    <img class="painting" src='puzzle.JPG'/>
      <h3 class="caption">Puzzle</h3>
 </div>
    <div class="paintBlock">
-    <img class="painting" src='redBorder.jpg'/>
+    <img class="painting" src='redBorder.JPG'/>
      <h3 class="caption">Red Border</h3>
 </div>
    <div class="paintBlock">
-    <img class="painting" src='redCloud.jpg'/>
+    <img class="painting" src='redCloud.JPG'/>
      <h3 class="caption">Red Cloud</h3>
 </div>
    <div class="paintBlock">
-    <img class="painting" src='worm.jpg'/>
+    <img class="painting" src='worm.JPG'/>
      <h3 class="caption">Worm</h3>
 </div>
   </div>
@@ -80,7 +80,7 @@
  </section>
 <section class="image-text-container">
     <div class="image-side">
-      <img src="mikey.jpg" alt="Image description">
+      <img src="mikey.JPG" alt="Image description">
     </div>
     <div class="text-side">
       <h2 class= "inTouch">Get in touch</h2>
