--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
      <h3 class="caption">Head On Black</h3>
 </div>
    <div class="paintBlock">
-    <img class="painting" src='puzzle.JPG'/>
+    <img class="painting" src='Puzzle.JPG'/>
      <h3 class="caption">Puzzle</h3>
 </div>
    <div class="paintBlock">
@@ -70,7 +70,7 @@
      <h3 class="caption">Red Cloud</h3>
 </div>
    <div class="paintBlock">
-    <img class="painting" src='worm.JPG'/>
+    <img class="painting" src='Worm.JPG'/>
      <h3 class="caption">Worm</h3>
 </div>
   </div>
@@ -80,7 +80,7 @@
  </section>
 <section class="image-text-container">
     <div class="image-side">
-      <img src="mikey.JPG" alt="Image description">
+      <img src="Mikey.JPG" alt="Image description">
     </div>
     <div class="text-side">
       <h2 class= "inTouch">Get in touch</h2>
