--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
      <h3 class="caption">Blue Streak</h3>
 </div>
    <div class="paintBlock">
-    <img class="painting" src='headOnBlack.JPG'/>
+    <img class="painting" src='HeadOnBlack.JPG'/>
      <h3 class="caption">Head On Black</h3>
 </div>
    <div class="paintBlock">
@@ -80,7 +80,7 @@
  </section>
 <section class="image-text-container">
     <div class="image-side">
-      <img src="Mikey.JPG" alt="Image description">
+      <img src="Mikey.jpg" alt="Image description">
     </div>
     <div class="text-side">
       <h2 class= "inTouch">Get in touch</h2>
