--- a/MikeyGallery.html
+++ b/MikeyGallery.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="mikeStyle.css">
+    <link rel="stylesheet" href="magic.css">
     <title>Micheal Mills Gallery</title>
 </head>
 <body>
@@ -16,8 +16,8 @@
       <h1>Micheal Mills Art</h1>
       <nav>
         <ul>
-          <li><a href="mikey.html">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">About</a></li>
           <li><a href="tel:+19707399259">(970)739-9259</a></li>
         </ul>
       </nav>
@@ -32,15 +32,16 @@
      <h3 class="caption">Worm</h3>
 </div>
   </div>
+     <a href="index.html">
   <button class= "viewGallery">
-     Veiw Gallery
-  </button>
+     Honme
+  </button></a>
  </section>
 <footer>
     <p>&copy; 2024 Micheal Mills</p>
     <nav>
       <ul>
-        <li><a href="mikey.html">About</a></li>
+        <li><a href="index.html">About</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Terms</a></li>
       </ul>
