--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="MikeyGallery.html">Gallery</a></li>
           <li><a href="tel:+19707399259">(970)739-9259</a></li>
         </ul>
       </nav>
@@ -74,9 +74,9 @@
      <h3 class="caption">Worm</h3>
 </div>
   </div>
-  <button class= "viewGallery">
+<a href="mikeyGallery.html">  <button class= "viewGallery">
      Veiw Gallery
-  </button>
+  </button></a>
  </section>
 <section class="image-text-container">
     <div class="image-side">
