--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
      <h3 class="caption">Worm</h3>
 </div>
   </div>
-<a href="mikeyGallery.html">  <button class= "viewGallery">
+<a href="MikeyGallery.html">  <button class= "viewGallery">
      Veiw Gallery
   </button></a>
  </section>
