--- a/MikeyGallery.html
+++ b/MikeyGallery.html
@@ -28,7 +28,7 @@
   <h2>Paintings</h2>
   <div class= "wrapper">
    <div class="paintBlock">
-    <img class="painting" src='worm.jpg'/>
+    <img class="painting" src='Worm.JPG'/>
      <h3 class="caption">Worm</h3>
 </div>
   </div>
