--- a/MikeyGallery.html
+++ b/MikeyGallery.html
@@ -34,7 +34,7 @@
   </div>
      <a href="index.html">
   <button class= "viewGallery">
-     Honme
+     Home
   </button></a>
  </section>
 <footer>
