--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <nav>
       <ul>
         <li><a href="#">About</a></li>
-        <li><a href="#">Gallery</a></li>
+        <li><a href="MikeyGallery.html">Gallery</a></li>
         <li><a href="#">Terms</a></li>
       </ul>
     </nav>
